docs: regenerate project documentation (zh, multiloader-aware)